# python_starter_project

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  LEARNING_GUIDE.md  Makefile  README.md  TUTORIAL.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/routers/: health.py
backend/tests/: test_health.py
frontend/: vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: client.ts
